PERSONACHANGEREQUESTAPP/force-app/main/default/objects/Persona_Change_Request__c.object
<CustomObject>
    <description>This allows automated change request of a users persona for UAT</description>
    <label>Persona Change Request</label>
    <nameField>
        <displayFormat>{0000}</displayFormat>
        <label>Persona Change Request Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Persona Change Requests</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>