PERSONACHANGEREQUESTAPP/force-app/main/default/objects/Persona_Change_Request__c/fields/JSON_MirrorAs_Blob__c.field-meta.xml
<CustomField>
    <fullName>JSON_MirrorAs_Blob__c</fullName>
    <label>JSON MirrorAs Blob</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>