PERSONACHANGEREQUESTAPP/force-app/main/default/objects/Persona_Change_Request__c/fields/JSON_Revert_Blob__c.field-meta.xml
<CustomField>
    <fullName>JSON_Revert_Blob__c</fullName>
    <label>JSON Revert Blob</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>