PERSONACHANGEREQUESTAPP/force-app/main/default/objects/Persona_Change_Request__c/fields/Last_Reverted__c.field-meta.xml
<CustomField>
    <fullName>Last_Reverted__c</fullName>
    <label>Last Reverted</label>
    <type>DateTime</type>
</CustomField>