PERSONACHANGEREQUESTAPP/force-app/main/default/objects/Persona_Change_Request__c/fields/MirrorAs__c.field-meta.xml
<CustomField>
    <fullName>MirrorAs__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>MirrorAs</label>
    <referenceTo>User</referenceTo>
    <relationshipName>MirrorAs</relationshipName>
    <type>Lookup</type>
</CustomField>