PERSONACHANGEREQUESTAPP/force-app/main/default/objects/Persona_Change_Request__c/recordTypes/Original_Persona.recordType-meta.xml
<RecordType>
    <fullName>Original_Persona</fullName>
    <active>true</active>
    <label>Original Persona</label>
</RecordType>